create search jquery for filters

--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -14,7 +14,7 @@ block content
           fieldset.form-group
             label(for='recipe-editor-ingredients') Camino
             |
-            select.form-control(name="path")
+            select.form-control(name="path" id="selectPath")
               each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
                 option= val
 
