--- a/views/layout.pug
+++ b/views/layout.pug
@@ -64,3 +64,4 @@ include includes/footer.pug
   script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
   script(src='/js/carrusel.js')
   script(src='/js/welcome.js')
+  script(src='/js/main.js')
