--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,8 @@ head
   link(href='https://fonts.googleapis.com/css?family=News+Cycle', rel='stylesheet')
   link(href='https://fonts.googleapis.com/css?family=Barrio', rel='stylesheet')
   link(rel='icon', type='image/png', href='../img/only_logo.png')
+  
+
 nav.navbar.navbar-default.navbar-fixed-top.header-mine
   .container
     button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -49,7 +51,7 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
         li
           a(href='about.html')  Blog
         li
-          a(href='/home/acount')  Anúnciate gratis
+          a(href='/acount')  Anúnciate gratis
 
  
 
@@ -64,4 +66,8 @@ include includes/footer.pug
   script(src="/bower_components/bootstrap/dist/js/bootstrap.min.js")
   script(src='/js/carrusel.js')
   script(src='/js/welcome.js')
-  script(src='/js/main.js')
+  script(src='/js/search.js')
+  script(src='/js/tcal.js')
+  
+
+
