title events - & change click for onchange

--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -1,6 +1,8 @@
 extends layout
 block content
   .container
+    h1 Retiros
+    .hr-line
     each retiro in retiros
       .col-sm-6.col-md-3
         .thumbnail.offer
