--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -6,7 +6,7 @@ body
   margin-top: 150px
 
 .carousel-inner 
-  height: 400px !important
+  height: 380px !important
 #myCarousel
   margin-top: 14px
   .nav
@@ -231,7 +231,7 @@ div.form-group.label-taller
   font-family: News Cycle
 .cont-body
   margin-top: 20px !important
-  margin-left: 90px
+  margin-left: 100px
   
 
 .cont-body
@@ -240,6 +240,7 @@ div.form-group.label-taller
 
 .pre-footer
   margin: 0px
+  height: 100%
   width: 100%
   background-color: #f8af00
   text-align: justify
