in progress delete, modalSocial, & moment

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,12 +20,12 @@ nav.navbar.navbar-default.navbar-fixed-top.header-mine
     .navbar-collapse.collapse
       ul.nav.navbar-nav.navbar-left.color-blue
         li
-          a(href='about.html')
+          a(href='mailto:litulandio@gmail.com')
             i.glyphicon.glyphicon-envelope
             |  info@encuentratucamino.com
       ul.nav.navbar-nav.navbar-right.color-blue
         li
-          a(href='about.html')
+          a(href='javascript:agregar()')
             i.glyphicon.glyphicon-heart-empty
             |  Mis favoritos
         li
@@ -68,6 +68,7 @@ include includes/footer.pug
   script(src='/js/welcome.js')
   script(src='/js/search.js')
   script(src='/js/tcal.js')
+  script(src='/js/favorites.js')
   
 
 
