--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -33,24 +33,89 @@ block content
                     img(src='https://encuentraturetiro.com/wp-content/uploads/2016/12/Yoga-Meditation2.jpg', width='100%')
                     .caption
                       div.container.size-mods
-                          h3.text-center 
+                          h2.text-center 
                           |Titulo: #{retiro.title}
                           p
                           i.glyphicon.glyphicon-calendar
-                          | Fecha:#{retiro.createdEvent}                            
+                          | Fecha Public: #{retiro.createdEvent} 
+                          p
+                          i.glyphicon.glyphicon-time
+                          | Hora Publi: #{retiro.hourEvent}         
                           hr
                       div.size-mods
-                          a.sizes(href="/retiros/add/:id") 
-                              i.glyphicon.glyphicon-trash
+                          a.sizes.remove(href="/acount/"+ retiro.id) 
+                              i.remove.glyphicon.glyphicon-trash
                               |  Eliminar
                           p.size-mod
-                          a.sizes(href="/retiros/add/:id")  
+                          a.remove.sizes(href="/acount/#{retiro.id}")
                             i.glyphicon.glyphicon-pencil
                             |  Modificar
                           p.size-mod.text-center
-                          a.sizes(href="/retiros/add/:id")  
+                          a.sizes(href='#success', data-toggle='modal')  
                               i.glyphicon.glyphicon-share-alt
                               |  Compartir
+                  #success.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+                    .modal-dialog
+                      .modal-content
+                        .modal-header.modal-header-success
+                          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+                          h1
+                            i.i-modal.glyphicon.glyphicon-thumbs-up
+                            |  Quieres compartir: #{retiro.title} 
+                        .modal-body
+                          .containear.margins-modal
+                            br
+                            br
+                            script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+                            ins.adsbygoogle(style='display:block', data-ad-client='ca-pub-5715866801509976', data-ad-slot='6618380844', data-ad-format='auto')
+                            script.
+                              (adsbygoogle = window.adsbygoogle || []).push({});
+                            br
+                            br
+                            #buttons-modal
+                              .facebook.button-modal
+                                i.icon-modal
+                                  i.icon-facebook
+                                .slide-modal
+                                  p.p-modal  facebook
+                                iframe(src='//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Freference%2Fplugins%2Flike&send=false&layout=button_count&width=80&show_faces=false&font&colorscheme=light&action=like&height=20&appId=568581339861351', scrolling='no', frameborder='0', style='border:none; overflow:hidden; width:80px; height:20px;', allowtransparency='true')
+                              .twitter.button-modal
+                                i.icon-modal
+                                  i.icon-twitter
+                                .slide-modal
+                                  p.p-modal  twitter
+                                |  
+                                a.twitter-share-button(href='https://twitter.com/share', data-via='mariuCSS') Tweet
+                                script.
+                                  !function(d,s,id){
+                                  var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+                                  if(!d.getElementById(id)){
+                                  js=d.createElement(s);
+                                  js.id=id;
+                                  js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+                              .google.button-modal
+                                i.icon-modal
+                                  i.icon-modal-google-plus
+                                .slide-modal
+                                  p.p-modal  google+
+                                .g-plusone(data-size='medium')
+                                script(type='text/javascript').
+                                  (function() {
+                                  var po = document.createElement('script');
+                                  po.type = 'text/javascript';
+                                  po.async = true;
+                                  po.src = 'https://apis.google.com/js/plusone.js';
+                                  var s = document.getElementsByTagName('script')[0];
+                                  s.parentNode.insertBefore(po, s);
+                                  }
+                                  )();
+
+                            .modal-footer
+                              button.btn.btn-default.pull-left(type='button', data-dismiss='modal') Close
+                        
+  
+       
+
       .panel.panel-default
         #headingTwo.panel-heading(role='tab')
           h4.panel-title
@@ -75,7 +140,9 @@ block content
               a(href='/retiros/add')
                 i.glyphicon.glyphicon-plus-sign
                 |  Crear anuncio
-
+              .container
+   
+  
 
           
   br
@@ -84,3 +151,4 @@ block content
   script(src='/bower_components/jquery/dist/jquery.min.js')
   script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
   script(src='/js/accurdion.js')
+  script(src='/js/main.js')
