design html event-detail

--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -4,4 +4,6 @@
 @import '_createEvent.sass'
 @import '_calendar.sass'
 @import '_accurdion.sass'
-@import '_modalSocial'
+@import '_modalSocial.sass'
+@import '_detailEvent.sass'
+@import '_shareDetail.sass'
