converter to pug detailEvent

--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -5,8 +5,8 @@ block content
     .hr-line
     each retiro in retiros
       .col-sm-6.col-md-3
-        .thumbnail.offer
-         a(href='#')
+        .thumbnail.offera
+         a(href='/details')
           img(src='https://encuentraturetiro.com/wp-content/uploads/2016/12/two-sisters.jpg', width='100%')
           h2.text-center #{retiro.title}
           div
