--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -43,7 +43,7 @@ block content
                           | Hora Publi: #{retiro.hourEvent}         
                           hr
                       div.size-mods
-                          button.btn.remove(type='button' data-id=`${retiro._id}`)
+                          a.btn.remove(type='button' data-id=`${retiro._id}`)
                               i.remove.glyphicon.glyphicon-trash
                               |  Eliminar
                           p.size-mod
