--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -63,6 +63,17 @@
   padding-right: 20px
   margin-left: -70px
 
+.panel-four 
+  margin-top: -65px 
+  margin-right: -90px
+  padding-right: 20px
+  margin-left: 870px
+
+.panel-five
+  margin-top: -65px 
+  margin-right: -90px
+  padding-right: 20px
+  margin-left: 870px
 
 .panel-body
   background-color: #f8f8f8
