--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .welcome.text-center.container
     p.welcome-top
-     | Mi cuenta
+     | Publica tu anuncio
     .hr-line
   nav.navbar.navbar-default.navbar-count
     .container
@@ -15,99 +15,118 @@ block content
  
   h1.font-categories.container Retiros
   .container.well
-    form(action='/retiros', method='POST')
-      .row
-        .col-xs-12.col-md-4
-          fieldset.form-group
-            label(for='recipetitle') Titulo
-            |
-            input#recipetitle.form-control(rows='1', maxlength='30', name="title")
-        .col-xs-12.col-md-4
-          fieldset.form-group
-            label(for='recipe-editor-ingredients') Camino
-            |
-            select.form-control(name="road" id="selectPath")
-              each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
-                option= val
+      form.edit-retiro(action='/retiros', method='POST')
+        .container
+          br
+          .col-sm-8
+              | Añade imágenes
+              
+              .row
+                br  
+                .form-group.col-sm-2
+                  .img-picker
+                .form-group.col-sm-2
+                  .img-picker
+                .form-group.col-sm-2
+                  .img-picker
+                .form-group.col-sm-2
+                  .img-picker
+                .form-group.col-sm-2
+                  .img-picker
+        .row
+          .col-xs-12.col-md-4
+            fieldset.form-group
+              label(for='recipetitle') Titulo
+              | 
+              input#recipetitle.form-control(rows='1', maxlength='30', name="title") 
+          .col-xs-12.col-md-4
+            fieldset.form-group
+              label(for='recipe-editor-ingredients') Camino
+              |
+              select.form-control(name="road" id="selectPath")
+                each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
+                  option= val
 
-        //- .col-xs-12.col-md-3
-        //-   fieldset.form-group
-        //-     label(for='recipe-editor-ingredients') Categoria de anuncio
-        //-     |
-        //-     select.form-control(name="category")
-        //-       each val in ['Selecciona...', 'Retiros', 'Formaciones', 'Talleres', 'Conferencias', 'Maestros espirituales']
-        //-         option= val
-        .col-xs-12.col-md-4
-          fieldset.form-group
-            label(for='recipe-editor-ingredients') Comunidad aut&oacute;noma
-            |
-            - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"];
-            select.form-control(name="comunity")
-              each val in cities
-                option= val
-        .col-xs-12.col-md-12
-          fieldset.form-group
-            label(for='recipetitle') Localidad
-            |
-            input#recipetitle.form-control(rows='1', maxlength='30', name="localitation")
+          //- .col-xs-12.col-md-3
+          //-   fieldset.form-group
+          //-     label(for='recipe-editor-ingredients') Categoria de anuncio
+          //-     |
+          //-     select.form-control(name="category")
+          //-       each val in ['Selecciona...', 'Retiros', 'Formaciones', 'Talleres', 'Conferencias', 'Maestros espirituales']
+          //-         option= val
+          .col-xs-12.col-md-4
+            fieldset.form-group
+              label(for='recipe-editor-ingredients') Comunidad aut&oacute;noma
+              |
+              - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"];
+              select.form-control(name="comunity")
+                each val in cities
+                  option= val
+          .col-xs-12.col-md-12
+            fieldset.form-group
+              label(for='recipetitle') Localidad
+              |
+              input#recipetitle.form-control(rows='1', maxlength='30', name="localitation")
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6247519.989738545!2d-8.203315099065238!3d40.13010060325238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc42e3783261bc8b%3A0xa6ec2c940768a3ec!2zRXNwYcOxYQ!5e0!3m2!1ses!2ses!4v1490055943547" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-        .col-xs-12.col-md-2
-          fieldset.form-group
-            label(for='recipetitle') Fecha Inicio
-            |
-            input.tcal.form-control(name="startDate")
-        .col-xs-12.col-md-1
-          p.label-time Hora
-        .col-xs-12.col-md-1.label-nums
-          fieldset.form-group
-            br
-            |
-            select.form-control(name="timeHourStart")
-              each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
-                option= val
-        .col-xs-12.col-md-1
-          p.label-time Minuto
-        .col-xs-12.col-md-1.label-nums
-          fieldset.form-group
-            br
-            |
-            select.form-control(name="timeMinuteStart")
-              each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
-                option= val
-        .col-xs-12.col-md-2
-          fieldset.form-group
-            label(for='recipetitle') Fecha Fin
-            |
-            input.tcal.form-control(name="endDate")
-        .col-xs-12.col-md-1
-          p Hora
-        .col-xs-12.col-md-1
-          fieldset.form-group
-            br
-            |
-            select.form-control(name="timeHourEnd")
-              each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
-                option= val
-        .col-xs-12.col-md-1
-          p Minuto
-        .col-xs-12.col-md-1
-          fieldset.form-group
-            br
-            |
-            select.form-control(name="timeMinuteEnd")
-              each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
-                option= val
-        .col-xs-12.col-md-12
-          fieldset.form-group
-            label(for='recipe-editor-ingredients') Descripci&oacute;n
-            textarea#recipe-editor-ingredients.form-control(rows='3', name="description")
-          fieldset.form-group
-            label(for='recipe-editor-directions') Tags
-            textarea#recipe-editor-directions.form-control(rows='3', name="tags")
-          .text-center
-            button.btn.btn-warning(type='submit' value="Submit") Publicar
+
+          .col-xs-12.col-md-2
+            fieldset.form-group
+              label(for='recipetitle') Fecha Inicio
+              |
+              input.tcal.form-control(name="startDate")
+          .col-xs-12.col-md-1
+            p.label-time Hora
+          .col-xs-12.col-md-1.label-nums
+            fieldset.form-group
+              br
+              |
+              select.form-control(name="timeHourStart")
+                each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
+                  option= val
+          .col-xs-12.col-md-1
+            p.label-time Minuto
+          .col-xs-12.col-md-1.label-nums
+            fieldset.form-group
+              br
+              |
+              select.form-control(name="timeMinuteStart")
+                each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
+                  option= val
+          .col-xs-12.col-md-2
+            fieldset.form-group
+              label(for='recipetitle') Fecha Fin
+              |
+              input.tcal.form-control(name="endDate")
+          .col-xs-12.col-md-1
+            p Hora
+          .col-xs-12.col-md-1
+            fieldset.form-group
+              br
+              |
+              select.form-control(name="timeHourEnd")
+                each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
+                  option= val
+          .col-xs-12.col-md-1
+            p Minuto
+          .col-xs-12.col-md-1
+            fieldset.form-group
+              br
+              |
+              select.form-control(name="timeMinuteEnd")
+                each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
+                  option= val
+          .col-xs-12.col-md-12
+            fieldset.form-group
+              label(for='recipe-editor-ingredients') Descripci&oacute;n
+              textarea#recipe-editor-ingredients.form-control(rows='10', name="description")
+            fieldset.form-group
+              label(for='recipe-editor-directions') Tags
+              textarea#recipe-editor-directions.form-control(rows='3', name="tags")
+            .text-center
+              button.btn.btn-warning(type='submit' value="Submit") Publicar
          
-
+  script(src='/js/imageLoad.js')
 
   //- .container          
   //-     each retiro in retiros
