--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ head
   link(href='https://fonts.googleapis.com/css?family=Barrio', rel='stylesheet')
   link(rel='icon', type='image/png', href='../img/only_logo.png')
   link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet', integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
+  script(src='http://maps.google.com/maps/api/js?sensor=false&callback=iniciar')
 
 
 nav.navbar.navbar-default.navbar-fixed-top.header-mine
@@ -70,6 +71,7 @@ include includes/footer.pug
   script(src='/js/search.js')
   script(src='/js/tcal.js')
   script(src='/js/favorites.js')
+  script(src='/js/imageLoad.js')
   
 
 
