--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -90,8 +90,8 @@ block content
 
 
 
-  script(type='text/javascript').
-    // Stop carousel
-    $('.carousel').carousel({
-    interval: false
-    });
+  //- script(type='text/javascript').
+  //-   // Stop carousel
+  //-   $('.carousel').carousel({
+  //-   interval: false
+  //-   });
