--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -1,21 +1,21 @@
-.carousel
-  width: 800px
+// .carousel
+//   width: 800px
 
-.article-slide .carousel-indicators
-  bottom: 0
-  left: 0
-  margin-left: 5px
-  width: 100%
-  li
-    border: medium none
-    border-radius: 0
-    float: left
-    height: 54px
-    margin-bottom: 5px
-    margin-left: 0
-    margin-right: 5px !important
-    margin-top: 0
-    width: 100px
+// .article-slide .carousel-indicators
+//   bottom: 0
+//   left: 0
+//   margin-left: 5px
+//   width: 100%
+//   li
+//     border: medium none
+//     border-radius: 0
+//     float: left
+//     height: 54px
+//     margin-bottom: 5px
+//     margin-left: 0
+//     margin-right: 5px !important
+//     margin-top: 0
+//     width: 100px
   img
     border: 2px solid #FFFFFF
     float: left
