--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -19,31 +19,32 @@ block content
         .container
           br
           .col-sm-8
+            div.text-left
               | Añade imágenes
-              
-              .row
-                br  
-                .form-group.col-sm-2
-                  .img-picker
-                .form-group.col-sm-2
-                  .img-picker
-                .form-group.col-sm-2
-                  .img-picker
-                .form-group.col-sm-2
-                  .img-picker
-                .form-group.col-sm-2
-                  .img-picker
+              br
+        .row
+            br
+            fieldset.form-group.col-sm-2
+                      .img-picker
+            fieldset.form-group.col-sm-2
+                      .img-picker
+            fieldset.form-group.col-sm-2
+                      .img-picker
+            fieldset.form-group.col-sm-2
+                      .img-picker
+            fieldset.form-group.col-sm-2
+                      .img-picker
         .row
           .col-xs-12.col-md-4
             fieldset.form-group
               label(for='recipetitle') Titulo
               | 
-              input#recipetitle.form-control(rows='1', maxlength='30', name="title") 
+              input#recipetitle.form-control(rows='1', maxlength='30', name="title", value=!retiros ? " " : retiros.title ) 
           .col-xs-12.col-md-4
             fieldset.form-group
               label(for='recipe-editor-ingredients') Camino
               |
-              select.form-control(name="road" id="selectPath")
+              select.form-control(name="road", id="selectPath", value= !retiros ? " " : retiros.road )
                 each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
                   option= val
 
@@ -59,7 +60,7 @@ block content
               label(for='recipe-editor-ingredients') Comunidad aut&oacute;noma
               |
               - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"];
-              select.form-control(name="comunity")
+              select.form-control(name="comunity", id="SelectComunity")
                 each val in cities
                   option= val
           .col-xs-12.col-md-12
@@ -67,14 +68,13 @@ block content
               label(for='recipetitle') Localidad
               |
               input#recipetitle.form-control(rows='1', maxlength='30', name="localitation")
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6247519.989738545!2d-8.203315099065238!3d40.13010060325238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc42e3783261bc8b%3A0xa6ec2c940768a3ec!2zRXNwYcOxYQ!5e0!3m2!1ses!2ses!4v1490055943547" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
+              #map
+               
           .col-xs-12.col-md-2
             fieldset.form-group
               label(for='recipetitle') Fecha Inicio
               |
-              input.tcal.form-control(name="startDate")
+              input.tcal.form-control(name="startDate", value=!retiros ? " " : retiros.startDate  )
           .col-xs-12.col-md-1
             p.label-time Hora
           .col-xs-12.col-md-1.label-nums
@@ -119,10 +119,10 @@ block content
           .col-xs-12.col-md-12
             fieldset.form-group
               label(for='recipe-editor-ingredients') Descripci&oacute;n
-              textarea#recipe-editor-ingredients.form-control(rows='10', name="description")
+              textarea#recipe-editor-ingredients.form-control(rows='10', name="description", value=!retiros ? " " : retiros.description)
             fieldset.form-group
               label(for='recipe-editor-directions') Tags
-              textarea#recipe-editor-directions.form-control(rows='3', name="tags")
+              textarea#recipe-editor-directions.form-control(rows='3', name="tags", value=!retiros ? " " : retiros.tags)
             .text-center
               button.btn.btn-warning(type='submit' value="Submit") Publicar
          
