--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+ 
   .welcome.text-center.container
     p.welcome-top
      | Publica tu anuncio
@@ -15,38 +16,43 @@ block content
  
   h1.font-categories.container Retiros
   .container.well
-      form.edit-retiro(action='/retiros', method='POST')
+      form.edit-retiro(action= action ? action : '/retiros', method= method ? method : 'POST')
         .container
           br
           .col-sm-8
             div.text-left
-              | Añade imágenes
+              | Imagen
               br
         .row
             br
             fieldset.form-group.col-sm-2
                       .img-picker
-            fieldset.form-group.col-sm-2
-                      .img-picker
-            fieldset.form-group.col-sm-2
-                      .img-picker
-            fieldset.form-group.col-sm-2
-                      .img-picker
-            fieldset.form-group.col-sm-2
-                      .img-picker
+            //- fieldset.form-group.col-sm-2
+            //-           .img-picker
+            //- fieldset.form-group.col-sm-2
+            //-           .img-picker
+            //- fieldset.form-group.col-sm-2
+            //-           .img-picker
+            //- fieldset.form-group.col-sm-2
+            //-           .img-picker
         .row
           .col-xs-12.col-md-4
             fieldset.form-group
               label(for='recipetitle') Titulo
               | 
-              input#recipetitle.form-control(rows='1', maxlength='30', name="title", value=!retiros ? " " : retiros.title ) 
+              input#recipetitle.form-control(rows='1', maxlength='30', name="title", value= !retiros ? " " : retiros.title ) 
           .col-xs-12.col-md-4
             fieldset.form-group
               label(for='recipe-editor-ingredients') Camino
               |
-              select.form-control(name="road", id="selectPath", value= !retiros ? " " : retiros.road )
+              select.form-control(name="road", id="selectPath" )
                 each val in ['Selecciona...', 'Yoga', 'Ayurveda', 'Yoga y Ayurveda']
-                  option= val
+                  -
+                    let selectRoad = !retiros ? "" : retiros.road
+                  if (selectRoad === (val) )
+                    option(selected="selected")= selectRoad
+                  else
+                    option= val
 
           //- .col-xs-12.col-md-3
           //-   fieldset.form-group
@@ -60,73 +66,98 @@ block content
               label(for='recipe-editor-ingredients') Comunidad aut&oacute;noma
               |
               - var cities = ["Selecciona...", "Andalucía", "Baleares", "Canarias", "Cantabria", "Cataluña", "Galicia", "La Rioja", "Navarra", "Aragón", "Castilla-La Mancha", "Castilla y León", "Comunidad Valenciana", "Extremadura", "Comunidad Valenciana", "Madrid", "Región de Murcia"];
-              select.form-control(name="comunity", id="SelectComunity")
+              select.form-control(name="comunity", id="selectComunity")
                 each val in cities
-                  option= val
+                  -
+                    let selectComunity = !retiros ? "" : retiros.comunity
+                  if (selectComunity === (val) )
+                    option(selected="selected")= selectComunity
+                  else
+                    option= val
           .col-xs-12.col-md-12
             fieldset.form-group
               label(for='recipetitle') Localidad
               |
-              input#recipetitle.form-control(rows='1', maxlength='30', name="localitation")
+              input#recipetitle.form-control(rows='1', maxlength='30', name="localitation" value= !retiros ? " " : retiros.localitation  )
               #map
                
           .col-xs-12.col-md-2
             fieldset.form-group
               label(for='recipetitle') Fecha Inicio
               |
-              input.tcal.form-control(name="startDate", value=!retiros ? " " : retiros.startDate  )
+              input.tcal.form-control(name="startDate", value= !retiros ? " " : retiros.startDate  )
           .col-xs-12.col-md-1
             p.label-time Hora
           .col-xs-12.col-md-1.label-nums
             fieldset.form-group
               br
               |
-              select.form-control(name="timeHourStart")
+              select.form-control(name="timeHourStart" id="selectHourStart")
                 each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
-                  option= val
+
+                  if (retiros === parseInt(val) )
+                    option(selected="selected")= val
+                  else
+                    option= val
           .col-xs-12.col-md-1
             p.label-time Minuto
           .col-xs-12.col-md-1.label-nums
             fieldset.form-group
               br
               |
-              select.form-control(name="timeMinuteStart")
+              select.form-control(name="timeMinuteStart", id="selectMinuteStart")
                 each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
-                  option= val
+                  if (retiros === parseInt(val) )
+                    option(selected="selected")= val
+                  else
+                    option= val
           .col-xs-12.col-md-2
             fieldset.form-group
               label(for='recipetitle') Fecha Fin
               |
-              input.tcal.form-control(name="endDate")
+              input.tcal.form-control(name="endDate" value= !retiros ? " " : retiros.endDate )
           .col-xs-12.col-md-1
             p Hora
           .col-xs-12.col-md-1
             fieldset.form-group
               br
               |
-              select.form-control(name="timeHourEnd")
+              select.form-control(name="timeHourEnd", id="selectHourEnd")
                 each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23"]
-                  option= val
+                  if (retiros === parseInt(val) )
+                    option(selected="selected")= val
+                  else
+                    option= val
           .col-xs-12.col-md-1
             p Minuto
           .col-xs-12.col-md-1
             fieldset.form-group
               br
               |
-              select.form-control(name="timeMinuteEnd")
+              select.form-control(name="timeMinuteEnd", id="selectMinuteEnd")
                 each val in ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "54", "55", "56", "57", "58", "59"]
-                  option= val
+                  if (retiros === parseInt(val) )
+                    option(selected="selected")= val
+                  else
+                    option= val
           .col-xs-12.col-md-12
             fieldset.form-group
               label(for='recipe-editor-ingredients') Descripci&oacute;n
-              textarea#recipe-editor-ingredients.form-control(rows='10', name="description", value=!retiros ? " " : retiros.description)
+              textarea#recipe-editor-ingredients.form-control(rows='10' name="description")
+                  // -
+                  //  let valu = $('#recipe-editor-ingredients').value()
+
+                  
+
             fieldset.form-group
               label(for='recipe-editor-directions') Tags
-              textarea#recipe-editor-directions.form-control(rows='3', name="tags", value=!retiros ? " " : retiros.tags)
+              input#recipe-editor-directions.form-control(rows='3' name="tags" value= !retiros ? " " : retiros.tags  )
             .text-center
               button.btn.btn-warning(type='submit' value="Submit") Publicar
+
          
   script(src='/js/imageLoad.js')
+  script(src='/js/formEvents.js')
 
   //- .container          
   //-     each retiro in retiros
