--- a/views/layout.pug
+++ b/views/layout.pug
@@ -72,7 +72,8 @@ include includes/footer.pug
   script(src='/js/search.js')
   script(src='/js/tcal.js')
   script(src='/js/favorites.js')
-  script(src='/js/imageLoad.js')
+  script(src='/js/main.js')
+  //script(src='/js/imageLoad.js')
  
  
 
