--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1146,7 +1146,23 @@ a.social-icon {
     display: block; }
 
 #map {
+  height: 250px;
   width: 100%;
-  height: 50%; }
+  border: 1px solid #f8af00;
+  box-shadow: 1px, 1px, 1px;
+  opacity: 0.8; }
+
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: "Roboto", "sans-serif";
+  line-height: 30px;
+  padding-left: 10px; }
 
 /*# sourceMappingURL=style.css.map */
