--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,7 @@
 doctype html
 head
   meta(charset='UTF-8')
+  meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
   title Ayurveda & Yoga
   link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
   link(rel='stylesheet', type='text/css', href='/css/style.css')
@@ -9,8 +10,6 @@ head
   link(href='https://fonts.googleapis.com/css?family=Barrio', rel='stylesheet')
   link(rel='icon', type='image/png', href='/img/only_logo.png')
   link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet', integrity='sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN', crossorigin='anonymous')
-  script(src='http://maps.google.com/maps/api/js?sensor=false', type='text/javascript')
-  link(rel='stylesheet', href='/maps/documentation/javascript/demos/demos.css')
 
 
 nav.navbar.navbar-default.navbar-fixed-top.header-mine
@@ -72,10 +71,9 @@ include includes/footer.pug
   script(src='/js/search.js')
   script(src='/js/tcal.js')
   script(src='/js/favorites.js')
-  script(src='/js/main.js')
-  //script(src='/js/imageLoad.js')
+  script(src='/js/mai.js')
  
- 
+
 
 
 
