finish version .beta

--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -168,7 +168,7 @@ block content
 
   script(src='/bower_components/jquery/dist/jquery.min.js')
   script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
-  script(src='/js/mai.js')       
+  script(src='/js/main.js')       
   //-script(src='/js/imageLoad.js')
   script(src='/js/maps.js')
   script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyA61r6OA8-IEDX3MOYwvlOJmcZf3rbduHg&callback=initMap')
