--- a/views/layout.pug
+++ b/views/layout.pug
@@ -71,7 +71,7 @@ include includes/footer.pug
   script(src='/js/search.js')
   script(src='/js/tcal.js')
   script(src='/js/favorites.js')
-  script(src='/js/mai.js')
+  script(src='/js/main.js')
  
 
 
