--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -88,8 +88,8 @@ block content
             span.text-center.c     
             |#{retiros.tags}
 
-  script(src='/js/maps.js')
-  script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyA61r6OA8-IEDX3MOYwvlOJmcZf3rbduHg&callback=initMap')
+  script(src='/js/mapsEvent.js')
+  script(src = 'https://maps.googleapis.com/maps/api/js?key=AIzaSyC52RbKqcX9jVN7P8gQG8VYnhU5jl6gMuI&callback=initMap')
   //- script(type='text/javascript').
   //-   // Stop carousel
   //-   $('.carousel').carousel({
