view maps dinamic :) ueeee!!!

--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -79,6 +79,8 @@ block content
           .panel-body.my-panel
             span.text-center.c
             #map
+            input#long(name="long", hidden,  value=  parseFloat(retiros.long) )
+            input#lat(name="lat",hidden,  value= parseFloat(retiros.lat) )
            
     .col-md-5.panel-five
       .panel-two
