--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -120,7 +120,7 @@ div.form-group.label-taller
   height: 4px
   background-color: #f8af00
 
-.welcome-top
+#welcome-top
   margin-top: 20px
 
 .welcome
