--- a/views/add-event.pug
+++ b/views/add-event.pug
@@ -3,7 +3,7 @@ extends layout
 block content
  
   .welcome.text-center.container
-    p.welcome-top
+    p#welcome-top
      
       if (method==='PUT')
         | Editar Anuncio
