--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .welcome.text-center.container
-    p.welcome-top
+    p#welcome-top
       | #{retiros.title}
     .hr-line
   .my-container
