--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,7 @@ extends layout
 block content
 
     .welcome.text-center.container
-      p.welcome-top
+      p#welcome-top
         | Bienvenido a Tu portal de Anuncios: 
         strong Y
         | oga & 
