--- a/public/sass/_detailEvent.sass
+++ b/public/sass/_detailEvent.sass
@@ -16,6 +16,8 @@
 //     margin-right: 5px !important
 //     margin-top: 0
 //     width: 100px
+
+
   img
     border: 2px solid #FFFFFF
     float: left
@@ -45,6 +47,7 @@
   box-shadow: 0px 0px 10px #888
   border-color: #EFA13D
   margin-top: 160px
+
 .panel-heading
   border-radius: 3px
   color: #FFF
@@ -54,31 +57,41 @@
   padding-left: 58px 
   margin-top: -65px
   padding-right: 15px 
-  
+.panel-bottom
+  padding-left: 65px 
+  margin-top: -145px
+  padding-right: 15px
+
 .my-panel
-  padding-left: 160px !important
+  
   margin-left: 0px !important
- 
+  padding-left: 15px !important
+.margin-text
+  text-align: justify
+.social
+  margin-top: 0px
+  margin-bottom: 0px
   
 .panel-three
   margin-top: -65px 
   margin-right: -90px
   padding-right: 20px
   margin-left: -70px
-
+  margin-bottom: 200px
 .panel-four 
-  margin-top: -65px 
-  margin-right: -90px
+  margin-top: 270px 
+  margin-right: 0px
   padding-right: 20px
-  margin-left: 870px
+  margin-left: 890px
 
 .panel-five
-  margin-top: -65px 
-  margin-right: -90px
+  margin-top: 0px 
+  margin-right: 0px
   padding-right: 20px
-  margin-left: 870px
+  margin-left: 890px
 
 .panel-body
+
   background-color: #f8f8f8
   color: #4D4D4D
 hr
@@ -119,16 +132,23 @@ hr
   .twitter
     background: #00ACED
     text-shadow: 0px 0px #0087ba, 1px 1px #0087ba, 2px 2px #0087ba, 3px 3px #0087ba, 4px 4px #0087ba, 5px 5px #0087ba, 6px 6px #0087ba, 7px 7px #0087ba, 8px 8px #0087ba, 9px 9px #0087ba, 10px 10px #0087ba, 11px 11px #0087ba, 12px 12px #0087ba, 13px 13px #0087ba, 14px 14px #0087ba, 15px 15px #0087ba, 16px 16px #0087ba, 17px 17px #0087ba, 18px 18px #0087ba, 19px 19px #0087ba, 20px 20px #0087ba, 21px 21px #0087ba, 22px 22px #0087ba, 23px 23px #0087ba, 24px 24px #0087ba, 25px 25px #0087ba, 26px 26px #0087ba, 27px 27px #0087ba, 28px 28px #0087ba, 29px 29px #0087ba, 30px 30px #0087ba
+    
     &:hover
       color: #00ACED
+
+
   .facebook
     background: #3B579D
     text-shadow: 0px 0px #2d4278, 1px 1px #2d4278, 2px 2px #2d4278, 3px 3px #2d4278, 4px 4px #2d4278, 5px 5px #2d4278, 6px 6px #2d4278, 7px 7px #2d4278, 8px 8px #2d4278, 9px 9px #2d4278, 10px 10px #2d4278, 11px 11px #2d4278, 12px 12px #2d4278, 13px 13px #2d4278, 14px 14px #2d4278, 15px 15px #2d4278, 16px 16px #2d4278, 17px 17px #2d4278, 18px 18px #2d4278, 19px 19px #2d4278, 20px 20px #2d4278, 21px 21px #2d4278, 22px 22px #2d4278, 23px 23px #2d4278, 24px 24px #2d4278, 25px 25px #2d4278, 26px 26px #2d4278, 27px 27px #2d4278, 28px 28px #2d4278, 29px 29px #2d4278, 30px 30px #2d4278
+    margin-left: 30px
+
     &:hover
       color: #3B579D
   .google
     background: #DD4A3A
     text-shadow: 0px 0px #c23122, 1px 1px #c23122, 2px 2px #c23122, 3px 3px #c23122, 4px 4px #c23122, 5px 5px #c23122, 6px 6px #c23122, 7px 7px #c23122, 8px 8px #c23122, 9px 9px #c23122, 10px 10px #c23122, 11px 11px #c23122, 12px 12px #c23122, 13px 13px #c23122, 14px 14px #c23122, 15px 15px #c23122, 16px 16px #c23122, 17px 17px #c23122, 18px 18px #c23122, 19px 19px #c23122, 20px 20px #c23122, 21px 21px #c23122, 22px 22px #c23122, 23px 23px #c23122, 24px 24px #c23122, 25px 25px #c23122, 26px 26px #c23122, 27px 27px #c23122, 28px 28px #c23122, 29px 29px #c23122, 30px 30px #c23122
+    margin-left: 30px
+
     &:hover
       color: #DD4A3A
   .linkedin
@@ -141,3 +161,9 @@ hr
     text-shadow: 0px 0px #9f191e, 1px 1px #9f191e, 2px 2px #9f191e, 3px 3px #9f191e, 4px 4px #9f191e, 5px 5px #9f191e, 6px 6px #9f191e, 7px 7px #9f191e, 8px 8px #9f191e, 9px 9px #9f191e, 10px 10px #9f191e, 11px 11px #9f191e, 12px 12px #9f191e, 13px 13px #9f191e, 14px 14px #9f191e, 15px 15px #9f191e, 16px 16px #9f191e, 17px 17px #9f191e, 18px 18px #9f191e, 19px 19px #9f191e, 20px 20px #9f191e, 21px 21px #9f191e, 22px 22px #9f191e, 23px 23px #9f191e, 24px 24px #9f191e, 25px 25px #9f191e, 26px 26px #9f191e, 27px 27px #9f191e, 28px 28px #9f191e, 29px 29px #9f191e, 30px 30px #9f191e
     &:hover
       color: #CB2026
+.social
+  margin-left: 90px
+.img-top
+  border-radius: 25px
+  opacity: 0.6
+  padding-top: 0px
