--- a/views/myAcount.pug
+++ b/views/myAcount.pug
@@ -10,8 +10,8 @@ block content
       ul.top-menu
         li
           a(href='/acount')  Mis anuncios en encuentra tu camino
-        li
-          a(href='about.html')  Datos del perfil
+        //- li
+        //-   a(href='about.html')  Datos del perfil
   .container.demo.size-font-categories
     #accordion.panel-group(role='tablist', aria-multiselectable='')
       .panel.panel-default
