--- a/public/sass/_carrussel.sass
+++ b/public/sass/_carrussel.sass
@@ -6,7 +6,7 @@ body
   margin-top: 150px
  
 .carousel-inner 
-  height: 380px !important
+  height: 340px !important
 #myCarousel
   margin-top: 14px
   .nav
@@ -249,9 +249,16 @@ div.form-group.label-taller
     color: white
 
 .footer
-  margin: 0px
+  a
+    text-decoration: none !important
+    color: white
+  a:hover
+    color: #f8af00
+  color: white
+  margin-top: 20px
+  padding: 10px
   width: 100%
-  height: 200px
+  height: 100px
   background-color: #1d1d1b
 
   .localitation
@@ -259,4 +266,14 @@ div.form-group.label-taller
 
 .navbar-default .navbar-nav>li>a 
   color: white
-/*# sourceMappingURL=../css/style.map
+
+.links>a
+  text-decoration: none !important
+
+img.link:hover, a img.link:hover 
+  border: 4px solid  #f8af00
+  border-radius: 10px
+
+.copy
+  text-decoration: none !important
+  color: white
