--- a/views/Allretiros.pug
+++ b/views/Allretiros.pug
@@ -4,10 +4,10 @@ block content
     h1 Retiros
     .hr-line
     each retiro in retiros
-      .col-sm-6.col-md-3
-        .thumbnail.offera
-         a(href='/details/'+ retiro.id)
-          img(src='https://encuentraturetiro.com/wp-content/uploads/2016/12/two-sisters.jpg') 
+      .col-sm-6.col-md-3.events-link
+        .thumbnail.offer.margins.links
+         a.hvr-grow-shadow(href='/details/'+ retiro.id)
+          img.link(src='https://encuentraturetiro.com/wp-content/uploads/2016/12/two-sisters.jpg') 
           h2.text-center
             |#{retiro.title} 
           div
@@ -23,3 +23,5 @@ block content
           hr
           img(src='https://maxcdn.icons8.com/Android_L/PNG/24/Ecommerce/price_tag-24.png', title='Price Tag', width='24')
           |   #{retiro.tags} 
+
+
