--- a/views/home.pug
+++ b/views/home.pug
@@ -14,7 +14,7 @@ block content
         // Wrapper for slides
         .carousel-inner
           .item.active
-            img.img-carrusel.img-opac(src='../img/retiross.jpg')
+            img.img-carrusel.img-opac(src='../img/retiros.gif')
             .carousel-caption
               .form-group.label-taller.font-retiro
                 p.text-center.font-categories.size-title-categories Retiros
@@ -31,7 +31,7 @@ block content
                         button#search.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
           // End Item
           .item
-            img.img-carrusel.img-opac(src='../img/formaciones.jpg', height='-300px;')
+            img.img-carrusel.img-opac(src='../img/formaciones.gif', height='-300px;')
             .carousel-caption
               .form-group.label-taller.font-retiro
                 p.text-center.font-categories.size-title-categories Formaciones
@@ -48,7 +48,7 @@ block content
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
           // End Item
           .item
-            img.img-carrusel.img-opac(src='../img/talleress.jpg')
+            img.img-carrusel.img-opac(src='../img/talleres.gif')
             .carousel-caption
               .form-group.label-taller.font-retiro
                 p.text-center.font-categories.size-title-categories Talleres
@@ -65,7 +65,7 @@ block content
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
           // End Item
           .item
-            img.img-carrusel.img-opac(src='../img/conferenciass.jpg')
+            img.img-carrusel.img-opac(src='../img/conferencias.gif')
             .carousel-caption
               .form-group.label-taller.font-retiro
                 p.text-center.font-categories.size-title-categories Conferencias
@@ -82,7 +82,7 @@ block content
                         button.btn.btn-warning.search(type='button').i.glyphicon.glyphicon-search
             // End Item
           .item
-            img.img-carrusel.img-opac(src='../img/maestross.jpg')
+            img.img-carrusel.img-opac(src='../img/maestros.gif')
             .carousel-caption
               form
               .form-group.label-taller.font-retiro
@@ -125,18 +125,18 @@ block content
               |  Maestros espirituales
 
         // End Carousel
-    section.row.pre-footer.cont-body
-      .container
-        .col-md-4
-          h1.text-center Conecta
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, voluptas suscipit itaque, vel a excepturi eius fugit reiciendis velit fuga ad vero, corrupti maiores eos ipsum consectetur molestiae error quos?
-        .col-md-4
-          h1.text-center Conecta
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!
-        .col-md-4
-          h1.text-center Conecta
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!
-          
+    //- section.row.pre-footer.cont-body
+    //-   .container
+    //-     .col-md-4
+    //-       h1.text-center Conecta
+    //-       p
+    //-         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, voluptas suscipit itaque, vel a excepturi eius fugit reiciendis velit fuga ad vero, corrupti maiores eos ipsum consectetur molestiae error quos?
+    //-     .col-md-4
+    //-       h1.text-center Conecta
+    //-       p
+    //-         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!
+    //-     .col-md-4
+    //-       h1.text-center Conecta
+    //-       p
+    //-         | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!
+    //-       
