--- a/views/fullEvent.pug
+++ b/views/fullEvent.pug
@@ -48,7 +48,7 @@ block content
       .panel-two
         .panel.panel-yellow
           .panel-heading.text-center Compartir
-          .panel-body.my-panel.social
+          .panel-body.my-panel.social#sahre
             
             .social-nav    
               ul
@@ -74,10 +74,10 @@ block content
                       
  
     .panel-four
-      .panel-two
-        .panel.panel-yellow.text-center.c
+      .panel-two.social
+        .panel.panel-yellow.text-center.c#ubic
           .panel-heading.text-center Ubicación
-          .panel-body.my-panel.social
+          .panel-body.my-panel.social.bottom-map
             span.text-center.c
             #map
             input#long(name="long", hidden,  value=  parseFloat(retiros.long) )
