--- a/public/css/style.css
+++ b/public/css/style.css
@@ -756,8 +756,8 @@ i {
   padding-right: 15px; }
 
 .panel-bottom {
-  padding-left: 65px;
-  margin-top: -145px;
+  padding-left: 44px;
+  margin-top: -182px;
   padding-right: 15px; }
 
 .my-panel {
@@ -771,12 +771,14 @@ i {
   margin-top: 0px;
   margin-bottom: 0px; }
 
+#sahre {
+  padding-left: 126px !important; }
+
 .panel-three {
   margin-top: -65px;
   margin-right: -90px;
   padding-right: 20px;
-  margin-left: -70px;
-  margin-bottom: 200px; }
+  margin-left: -70px; }
 
 .panel-four {
   margin-top: 270px;
@@ -857,12 +859,22 @@ hr {
       color: #CB2026; }
 
 .social {
-  margin-left: 90px; }
+  margin: 0px !important;
+  margin-left: 90px;
+  margin-top: -200px;
+  padding-top: -5px; }
 
 .img-top {
   border-radius: 25px;
   opacity: 0.6;
   padding-top: 0px; }
+
+#ubic {
+  margin-top: -82px;
+  max-width: 561px; }
+
+.bottom-map {
+  height: 280px; }
 
 .social-cont {
   border-style: solid;
